--- a/Tareas/Tarea2/app/requirements.txt
+++ b/Tareas/Tarea2/app/requirements.txt
@@ -1,10 +1,15 @@
-blinker==1.8.1
+blinker==1.6.2
+cffi==1.15.1
 click==8.1.7
 colorama==0.4.6
+cryptography==41.0.4
 filetype==1.2.0
-Flask==3.0.3
-itsdangerous==2.2.0
-Jinja2==3.1.3
-MarkupSafe==2.1.5
+Flask==2.3.3
+importlib-metadata==6.8.0
+itsdangerous==2.1.2
+Jinja2==3.1.2
+MarkupSafe==2.1.3
+pycparser==2.21
 PyMySQL==1.1.0
-Werkzeug==3.0.2
+Werkzeug==2.3.7
+zipp==3.17.0
