--- a/Tareas/Tarea2/app/requirements.txt
+++ b/Tareas/Tarea2/app/requirements.txt
@@ -9,6 +9,7 @@ importlib-metadata==6.8.0
 itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
+pillow==10.3.0
 pycparser==2.21
 PyMySQL==1.1.0
 Werkzeug==2.3.7
