--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,7 @@
 Tareas/Tarea2/web/
 /Tareas/Tarea2/app/static/uploads
 *.png
-Tareas/Tarea3/web/
+/Tareas/Tarea3/web/
 /Tareas/Tarea3/app/static/uploads
+
 *.png
