Project bugs fixed

--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,7 @@
 # Ignorar la carpeta "web"
 Tareas/Tarea2/web/
-/Tareas/Tarea2/app/static/uploads
+Tareas/Tarea2/app/static/uploads/
 *.png
-/Tareas/Tarea3/web/
-/Tareas/Tarea3/app/static/uploads
-
+Tareas/Tarea3/web/
+Tareas/Tarea3/app/static/uploads/
 *.png
