--- a/Tareas/Tarea3/app/requirements.txt
+++ b/Tareas/Tarea3/app/requirements.txt
@@ -2,6 +2,7 @@ autopep8==2.0.2
 black==23.3.0
 cffi==1.15.1
 click==8.1.3
+colorama==0.4.6
 cryptography==40.0.2
 filetype==1.2.0
 Flask==2.2.3
@@ -13,6 +14,7 @@ MarkupSafe==2.1.2
 mypy-extensions==1.0.0
 packaging==23.1
 pathspec==0.11.1
+pillow==10.3.0
 platformdirs==3.2.0
 psycopg2-binary==2.9.6
 pycodestyle==2.10.0
@@ -20,6 +22,6 @@ pycparser==2.21
 PyMySQL==1.0.3
 six==1.16.0
 tomli==2.0.1
-typing-extensions==4.5.0
+typing_extensions==4.5.0
 Werkzeug==2.2.3
 zipp==3.15.0
